# cvewatch

./: .gitignore  BUILD_SUMMARY.md  EXAMPLES.md  INSTALL.md  LICENSE  Makefile  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  README.md  TESTING.md  pyproject.toml  test-all.sh
cvewatch/: __init__.py  cli.py  config.py  normalize.py  nvd.py  output.py  state.py  version.py
tests/: __init__.py  test_dates.py  test_pagination.py  test_severity.py  test_watch_diff.py
